reduce whitespace, fix button positions

--- a/public/stylesheets/buttonNeume.css
+++ b/public/stylesheets/buttonNeume.css
@@ -24,7 +24,6 @@
   color: black; 
   border-radius: 30px;
   width : 30%;
-  height : 1%;
   border: 2px solid #4caf50;
   z-index: 5000;
 }
